First try on fixing some more compile errors without actually testing: - use proper __FreeBSD_version check and more importantly check for __am64__   to be defined.  Whether the FreeBSD(_version) checks are needed is a   different question. - cast uint64_t to uintmax_t and use %jx for printing.

Note: there are more values that could be printed in that status function
	but leave that for the future;  printf doesn't seem to be the right
	way to do it anyway.
Note: there is more breakage related to i40e_allocate_dma*() having
	conflicting declarations, so more fixes to come.

PR:		193112
MFC after:	3 days
X-MFC with:	r270755


git-svn-id: svn+ssh://svn.freebsd.org/base/head@270799 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f